--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,115 @@
 body {
-    background-color: #b6e1a5;
+    background-color: #4f747c;
     color: seashell;
+    font-size: small;
 }
 
 ul {
     list-style-type: none;
+    padding-left:0;
+}
+
+.task {
+    margin-bottom: 1em;
+    padding: 0.5em;
+    border-radius: 5px;
+    background-color: #35b39f;
+    font-family: "Helvetic Neue", Helvetica, Arial;
+    border-left-width: 0.5em;
+    border-left-style: solid;
+
+}
+
+
+
+
+.horizontal {
+    display:inline-block;
+}
+
+.task_content {
+    display:inline-block;
+    vertical-align: middle;
+    width: 75%;
+}
+.task_buttons {
+
+    display:inline-block;
+    vertical-align: middle;
+    float: right;
+    clear: right;
+}
+
+.btn {
+    display: inline-block;
+    padding: 2px 5px;
+    margin-bottom: 0;
+    font-size: 14px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #333333;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    background-color: #f5f5f5;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border: 1px solid #bbbbbb;
+    border-radius: 5px;
+    border-bottom-color: #a2a2a2;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+}
+
+.btn:hover {
+    background-color: #e4e258;
+}
+
+.task_body {
+    display:inline-block;
+    clear: both;
+}
+
+.task_body i {
+    margin: 0.1em;
+}
+
+.task_body div {
+    margin-right: 1.5em;
+}
+
+.cat_work {
+    border-left-color: #ffa63d;
+}
+
+.cat_sport {
+    border-left-color: yellow;
+}
+
+.task_title {
+
+    font-size: medium;
+    font-weight: bold;
+    display:inline-block;
+    max-width: 90%;
+    white-space: nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+
+.task_timer {
+    display:inline-block;
+}
+.task_check {
+    display:inline-block;
+}
+
+.task_p_difficulty {
+    display:inline-block;
+}
+.task_p_satisfaction {
+    display:inline-block;
+}
+.task_p_effort {
+    display:inline-block;
 }
 
 .suggestion {
