--- a/css/style.css
+++ b/css/style.css
@@ -1,188 +1,51 @@
 body {
-    background-color: #4f747c;
-    color: seashell;
-    font-size: small;
-    margin: 0px;
+    background: rgba(208, 221, 43, 0.2);
+    margin: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-ul {
+nav {
+    background: rgb(103, 205, 220);
+    border-bottom: solid 4px rgba(14, 100, 145, 0.5);
+    height: 40px;
+    padding-top: 20px;
+
+}
+
+nav ul {
     list-style-type: none;
-    padding-left:0;
-    margin: 1em;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
-.task {
-    margin-bottom: 1em;
-    padding: 0.5em;
-    border-radius: 5px;
-    background-color: #35b39f;
-    font-family: "Helvetic Neue", Helvetica, Arial;
-    border-left-width: 0.5em;
-    border-left-style: solid;
 
-}
-
-#start_view {
-    margin: 1em;
-    padding: 1.2em;
-    border-radius: 5px;
-    background-color: #17676d;
-    font-family: "Helvetic Neue", Helvetica, Arial;
-    min-height: 90vh;
-}
-
-#start_suggestions {
-    margin-bottom: 3em;
-}
-
-.horizontal {
-    display:inline-block;
-}
-
-.task_content {
-    display:inline-block;
-    vertical-align: middle;
-    width: 75%;
-}
-
-.task_buttons {
-
-    display:inline-block;
-    vertical-align: middle;
-    float: right;
-    clear: right;
-}
-
-.btn {
-    display: inline-block;
-    padding: 2px 5px;
-    margin-bottom: 0;
-    font-size: 14px;
+nav ul li {
+    float: left;
+    display: block;
+    color: rgba(255, 255, 255, 0.7);
     text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    color: #333333;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    background-color: #f5f5f5;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    border: 1px solid #bbbbbb;
-    border-radius: 5px;
-    border-bottom-color: #a2a2a2;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-}
-
-.btn:hover {
-    background-color: #e4e258;
-}
-
-.task_body {
-    display:inline-block;
-    clear: both;
-}
-
-.task_body i {
-    margin: 0.1em;
-}
-
-.task_body div {
-    margin-right: 1.5em;
-}
-
-.cat_work {
-    border-left-color: #ffa63d;
-}
-
-.cat_sport {
-    border-left-color: yellow;
-}
-
-.task_title {
-
-    font-size: medium;
-    font-weight: bold;
-    display:inline-block;
-    max-width: 90%;
-    white-space: nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
-}
-
-.task_timer {
-    display:inline-block;
-}
-.task_check {
-    display:inline-block;
-}
-
-.task_p_difficulty {
-    display:inline-block;
-}
-.task_p_satisfaction {
-    display:inline-block;
-}
-.task_p_effort {
-    display:inline-block;
-}
-
-.suggestion {
-    margin-bottom: 0.5rem;
-    -moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
-    -webkit-box-shadow:inset 0px 39px 0px -24px #e67a73;
-    box-shadow:inset 0px 39px 0px -24px #e67a73;
-    background-color:#e4685d;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
-    border-radius:4px;
-    border:1px solid #ffffff;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
-    font-size:15px;
-    padding:6px 15px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #b23e35;
-}
-.suggestion:hover {
-    background-color: #eb332c;
-}
-.suggestion:active {
-    position:relative;
-    top:1px;
-}
-
-
-.decision_form {
-    font-family: "Helvetic Neue", Helvetica, Arial;
-    font-size: medium;
-}
-
-label {
-    font-size: small;
-    margin-left: 1.5em;
-}
-
-input {
-    padding: 3px 6px 3px 6px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-fieldset {
-    margin: 0px;
-    border: none;
-    border-bottom: solid;
-    text-align: center;
-}
-
-select {
-    font-size: large;
-}
-
-.hide {
-    visibility: hidden;
-}
-
-a {
+    padding: 0px 16px;
     text-decoration: none;
+    height: 100%;
+}
+
+.active {
+    color: white;
+    border-bottom: solid 4px white;
+    height: 100%;
+}
+
+nav ul li:hover:not(.active) {
+    color: rgb(232, 245, 49);
+    border-bottom: solid 4px rgb(208, 221, 43);
+    height: 100%;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+header {
+    color: #333333;
 }
