--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
 nav {
     background: rgb(103, 205, 220);
     border-bottom: solid 4px rgba(14, 100, 145, 0.5);
-    height: 40px;
-    padding-top: 20px;
+    height: 45px;
+    padding-top: 10px;
 
 }
 
@@ -19,15 +19,18 @@ nav ul {
     height: 100%;
 }
 
-
 nav ul li {
     float: left;
     display: block;
     color: rgba(255, 255, 255, 0.7);
     text-align: center;
-    padding: 0px 16px;
+    padding: 0px 40px;
     text-decoration: none;
     height: 100%;
+
+    background-size: auto 30px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .active {
@@ -42,11 +45,70 @@ nav ul li:hover:not(.active) {
     height: 100%;
 }
 
-li a:hover:not(.active) {
-    background-color: #111;
-}
 
 header {
     color: #333333;
     padding: 10px;
+}
+
+
+
+#home {
+    background-image: url("../icons/home.png");
+}
+
+#home.active {
+    background-image: url("../icons/home_active.png");
+}
+
+#home:hover:not(.active) {
+    background-image: url("../icons/home_hover.png");
+}
+
+#tasklist {
+    background-image: url("../icons/list.png");
+}
+
+#tasklist.active {
+    background-image: url("../icons/list_active.png");
+}
+
+#tasklist:hover:not(.active) {
+    background-image: url("../icons/list_hover.png");
+}
+
+#calendar {
+    background-image: url("../icons/calendar.png");
+}
+
+#calendar.active {
+    background-image: url("../icons/calendar_active.png");
+}
+
+#calendar:hover:not(.active) {
+    background-image: url("../icons/calendar_hover.png");
+}
+
+#stats {
+    background-image: url("../icons/stats.png");
+}
+
+#stats.active {
+    background-image: url("../icons/stats_active.png");
+}
+
+#stats:hover:not(.active) {
+    background-image: url("../icons/stats_hover.png");
+}
+
+#user {
+    background-image: url("../icons/user.png");
+}
+
+#user.active {
+    background-image: url("../icons/user_active.png");
+}
+
+#user:hover:not(.active) {
+    background-image: url("../icons/user_hover.png");
 }
