--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,20 @@ p {
     font-size: 1em;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+}
+
 nav {
     background: rgb(103, 205, 220);
     border-bottom: solid 4px rgba(14, 100, 145, 0.5);
     height: 45px;
     padding-top: 10px;
     min-width: 400px;
-    overflow: hidden;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
     padding: 0;
     height: 100%;
 }
@@ -80,6 +82,7 @@ header {
     background-color: rgba(255, 255, 255, 0.70);
     border-radius: 30px;
     position: relative;
+    margin-bottom: 10px;
 }
 
 #greeting:before { /* this adds the triangle to the speech bubble */
@@ -156,4 +159,79 @@ header {
 
 #user:hover:not(.active) {
     background-image: url("../icons/user_hover.png");
+}
+
+li.task {
+    border: solid;
+    border-radius: 4px;
+    border-width: 3px;
+    border-left-width: 14px;
+    border-color: #d0dd2b;
+
+    margin-bottom: 10px;
+    padding: 10px 6px 10px 6px;
+
+    background-color: rgba(255, 255, 255, 0.70);
+}
+
+ul.tasks {
+    padding: 0px 7px 0px 13px;
+}
+
+li.cat_work {
+    border-color: rgba(199, 129, 221, 0.76);
+}
+
+li.cat_sport {
+    border-color: rgba(221, 137, 85, 0.76);
+}
+
+.top_row {
+    width: 100%;
+}
+
+.task_title {
+    color: rgba(51, 51, 51, 0.91);
+}
+
+.task_title h2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding: 0px;
+    margin: 0px;
+    font-weight: 500;
+}
+
+.due_in {
+    float: right;
+    text-align: right;
+    padding-left: 15px;
+    font-weight: bold;
+
+}
+
+.bottom_row {
+    display: none;
+}
+
+.expanded {
+    display: inherit;
+}
+
+a {
+    font-weight: 500;
+}
+
+a:link {
+    color: rgb(103, 205, 220); text-decoration:none
+}
+a:visited {
+    color: rgb(103, 205, 220); text-decoration:none
+}
+a:active {
+    color: #e7f42d; text-decoration:none
+}
+a:hover {
+    color: #d0dd2b; text-decoration:none
 }
