--- a/css/pyramid.css
+++ b/css/pyramid.css
@@ -6,55 +6,129 @@ body {
 }
 .one {
     width: 0;
-    height: 0;
+    height: 1px;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-bottom: 5px solid rgba(103, 205, 220, 0.2);
+    border-bottom: 5px solid rgba(220, 226, 232, 0.7);
 }
-.one:hover {
+/*.one:hover {
     border-bottom: 5px solid deeppink;
+}*/
+
+
+
+.shape:hover {
+    border-bottom: 5px solid #6bf0ff;
 }
+
 .two {
-    border-bottom: 5px solid rgba(103, 205, 220, 0.4);
+    border-bottom: 5px solid rgba(103, 205, 220, 1);
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    height: 0;
-    width: 10px;
+    height: 1px;
+    width: 12px;
 }
-.two:hover {
-    border-bottom: 5px solid deeppink;
-}
+
 .three {
-    border-bottom: 5px solid rgba(103, 205, 220, 0.6);
+    border-bottom: 5px solid rgba(103, 205, 220, 1.0);
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    height: 0;
-    width: 20px;
+    height: 1px;
+    width: 24px;
 }
-.three:hover {
-    border-bottom: 5px solid deeppink;
-}
+
 
 .four {
-    border-bottom: 5px solid rgba(103, 205, 220, 0.8);
+    border-bottom: 5px solid rgba(103, 205, 220, 1.0);
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    height: 0;
-    width: 30px;
-}
-
-.four:hover {
-    border-bottom: 5px solid deeppink;
+    height: 1px;
+    width: 36px;
 }
 
 .five {
     border-bottom: 5px solid rgb(103, 205, 220);
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
+    height: 1px;
+    width: 48px;
+}
+
+
+
+
+
+.top {
+    width: 0;
     height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid rgba(103, 205, 220, 0.4);
+}
+
+.bottom {
+    border-bottom: 20px solid rgb(103, 205, 220);
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    height: 0;
+    width: 10px;
+}
+.bottom:hover {
+    border-bottom: 20px solid #d0dd2b;
+}
+
+
+
+.one1 {
+    width: 8px;
+    height: 1px;
+
+    border-bottom: 5px solid rgba(220, 226, 232, 0.7);
+}
+/*.one:hover {
+    border-bottom: 5px solid deeppink;
+}*/
+
+
+.two1 {
+    border-bottom: 5px solid rgba(103, 205, 220, 1);
+    width: 20px;
+}
+
+.three1 {
+    border-bottom: 5px solid rgba(103, 205, 220, 1.0);
+    width: 30px;
+}
+
+
+.four1 {
+    border-bottom: 5px solid rgba(103, 205, 220, 1.0);
     width: 40px;
 }
 
-.five:hover {
-    border-bottom: 5px solid deeppink;
+.five1 {
+    border-bottom: 5px solid rgb(103, 205, 220);
+    width: 50px;
+}
+
+.shape1 {
+    margin: auto;
+    border-left: 2px solid transparent;
+    border-right: 2px solid transparent;
+    height: 1px;
+
+}
+
+.shape1:hover {
+    border-bottom: 5px solid #6bf0ff;
+}
+
+
+
+.bla {
+!important;
+    border-bottom: 5px solid rgba(220, 226, 232, 0.7);
+}
+.bla:hover {
+    border-bottom: 5px solid rgba(220, 226, 232, 0.7);
 }
