user page for settings added, + dummy pages for stats and calendar

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background: rgba(208, 221, 43, 0.2);
     margin: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "proxima-nova","open-sans","Calibri",Helvetica,sans-serif;
 }
 
 h1 {
