display db content in list, styles and more content

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ li.cat_work {
     border-color: rgba(199, 129, 221, 0.76);
 }
 
+li.health {
+    border-color: rgba(199, 129, 221, 0.76);
+}
+
 li.cat_sport {
     border-color: rgba(221, 137, 85, 0.76);
 }
