--- a/css/style.css
+++ b/css/style.css
@@ -265,16 +265,24 @@ ul.tasks {
     padding: 0px 7px 0px 13px;
 }
 
-li.cat_work {
+li.work {
     border-color: rgba(199, 129, 221, 0.76);
 }
 
 li.health {
-    border-color: rgba(199, 129, 221, 0.76);
+    border-color: rgba(97, 163, 221, 0.76);
 }
 
-li.cat_sport {
+li.sport {
     border-color: rgba(221, 137, 85, 0.76);
+}
+
+li.home {
+    border-color: rgba(221, 94, 129, 0.76);
+}
+
+li.school {
+    border-color: rgba(78, 221, 173, 0.76);
 }
 
 .top_row {
@@ -290,7 +298,7 @@ li.cat_sport {
     font-weight: 500;
 }
 
-.due_in {
+.duetime {
     float: right;
     text-align: right;
     padding-left: 15px;
@@ -302,7 +310,7 @@ li.cat_sport {
     color: #dc2726;
 }
 
-.due_in > .description {
+.duetime > .description {
     text-align: right;
 }
 
