--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ footer {
 nav {
     background: rgb(103, 205, 220);
     border-bottom: solid 4px rgba(14, 100, 145, 0.5);
-    height: 45px;
+    height: 60px;
     padding-top: 10px;
     min-width: 400px;
     position:fixed;
@@ -50,7 +50,7 @@ nav {
 
 nav ul {
     padding: 0;
-    height: 100%;
+    height: 50px;
 }
 
 nav ul li {
@@ -65,6 +65,7 @@ nav ul li {
     background-size: auto 30px;
     background-position: center;
     background-repeat: no-repeat;
+    border-bottom: solid 4px rgba(208, 221, 43, 0);
 }
 
 .active {
