edit task view, implementation without update

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,10 @@ nav ul li:hover:not(.active) {
     display: none;
 }
 
+#edit_task_view {
+    display: none;
+}
+
 #rate_and_check_task {
     display: none;
 }
