--- a/css/form.css
+++ b/css/form.css
@@ -195,3 +195,16 @@ label + .difficulty > .trapez_5 {
 }
 
 #f_p_satisfaction_group { display: flex; justify-content: space-between; }
+#e_difficulty { display: flex; justify-content: space-between; }
+
+.e_done {
+    display: none;
+}
+
+.edit_label {
+    display: block;
+}
+
+.compare {
+    display: inline-block;
+}
