sort tasks by priority, randomized or categorized decision helper implemented

--- a/css/form.css
+++ b/css/form.css
@@ -278,3 +278,7 @@ label + .difficulty > .trapez_5 {
     border-radius: 12px;
     padding-bottom: 10px;
 }
+
+#decision_helper {
+    display: inline-block;
+}
